tests/macro-tests/cases/widget_new/error_in_when_expr3.stderr
error: expected identifier or index
 --> cases/widget_new/error_in_when_expr3.rs:7:23
  |
7 |         when *#margin.0. {
  |                       ^^
