tests/macro-tests/cases/widget_new/error_in_when_expr3.rs
use zng::{APP, layout::margin, widget::Wgt};

fn main() {
    let _scope = APP.minimal();
    let _ = Wgt! {
        margin = 0;
        when *#margin.0. {
            margin = 10;
        }
    };
}
